log
Thu 20 Apr 2023 08:04:50 PM UTC: 
 tests:  1|8
total_score: 0/70
d1c5266
Thu 20 Apr 2023 08:35:34 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
a6c5e98
Thu 20 Apr 2023 08:35:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ec1cc27
Thu 20 Apr 2023 09:10:48 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  4|7
total_score: 5/70
96661a8
Thu 20 Apr 2023 09:15:51 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5035520
Thu 20 Apr 2023 09:41:32 PM UTC: 
 treemap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
96e8328
Thu 20 Apr 2023 09:42:19 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
de3aa3e
Thu 20 Apr 2023 09:44:59 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
40925af
Fri 21 Apr 2023 12:14:36 AM UTC: 
 treemap.c | 24 +++++++++---------------
 1 file changed, 9 insertions(+), 15 deletions(-)
 tests:  11|6
total_score: 15/70
ad93900
Fri 21 Apr 2023 12:23:36 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
8a2eb75
Fri 21 Apr 2023 12:38:23 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   58 |   TreeNode* newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
57dcf54
Fri 21 Apr 2023 12:40:31 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   58 |   TreeNode* newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d4c7478
Fri 21 Apr 2023 12:41:13 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:13: error: unused variable ‘newNode’ [-Werror=unused-variable]
   58 |   TreeNode* newNode = createTreeNode(key, value);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
54421a6
Fri 21 Apr 2023 12:56:51 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  13|5
total_score: 25/70
f395667
Fri 21 Apr 2023 01:08:09 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
e76315c
Fri 21 Apr 2023 01:29:36 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
5b2f771
Fri 21 Apr 2023 02:29:58 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
a202eba
Fri 21 Apr 2023 02:46:41 PM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  16|4
total_score: 30/70
a6b350f
Fri 21 Apr 2023 02:51:10 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  16|4
total_score: 30/70
a97f3bc
